stratosource/stratosource/sfdiff/testfiles/ltest/unpackaged/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Enhancements</fullName>
        <description>The stage progression for enhancement requests</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Defer</fullName>
        </values>
        <values>
            <fullName>Delayed</fullName>
        </values>
        <values>
            <fullName>Design</fullName>
        </values>
        <values>
            <fullName>Duplicate</fullName>
        </values>
        <values>
            <fullName>Existing Functionality</fullName>
        </values>
        <values>
            <fullName>Follow - up</fullName>
        </values>
        <values>
            <fullName>Implemented</fullName>
        </values>
        <values>
            <fullName>In Dev</fullName>
        </values>
        <values>
            <fullName>In Process</fullName>
        </values>
        <values>
            <fullName>In-Scope</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Out-of-Scope</fullName>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Pending Close</fullName>
        </values>
        <values>
            <fullName>Process</fullName>
        </values>
        <values>
            <fullName>Review</fullName>
        </values>
        <values>
            <fullName>Waiting Response</fullName>
        </values>
        <values>
            <fullName>Waiting UAT</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>IT</fullName>
        <description>For App Maintenance Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Analyze</fullName>
        </values>
        <values>
            <fullName>Approved</fullName>
        </values>
        <values>
            <fullName>Build</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Deploy</fullName>
        </values>
        <values>
            <fullName>Design</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Rejected</fullName>
        </values>
        <values>
            <fullName>Submitted</fullName>
        </values>
        <values>
            <fullName>Test</fullName>
        </values>
        <values>
            <fullName>UAT</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Momentum</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Dev</fullName>
        </values>
        <values>
            <fullName>In Process</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Pending Close</fullName>
        </values>
        <values>
            <fullName>Pending Priority</fullName>
        </values>
        <values>
            <fullName>Waiting Response</fullName>
        </values>
        <values>
            <fullName>Waiting UAT</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Parking Lot</fullName>
        <description>The stages of parking lot requests</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Dev</fullName>
        </values>
        <values>
            <fullName>In Process</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending Close</fullName>
        </values>
        <values>
            <fullName>Waiting Response</fullName>
        </values>
        <values>
            <fullName>Waiting UAT</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Partner Portal</fullName>
        <description>PRM support process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Analyze</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Process</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Pending Close</fullName>
        </values>
        <values>
            <fullName>Waiting Response</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>APAC_Approval__c</fullName>
        <description>Indicates this case has been approved for IT review.</description>
        <label>APAC Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Country__c</fullName>
        <description>Account Country</description>
        <formula>Account.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Global_Region__c</fullName>
        <description>Display the Partner user Account Global Region</description>
        <formula>TEXT( Account.Global_Region__c   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Display the Partner user Account Global Region</inlineHelpText>
        <label>Account Global Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Countries_of_Operation__c</fullName>
        <label>Additional Countries of Operation</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Åland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benelux</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>British Virgin Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burkina Faso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burundi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cameroon</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Admin_Assessment__c</fullName>
        <label>Admin Assessment</label>
        <picklist>
            <picklistValues>
                <fullName>Bug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enhancement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Technical</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Admin_Comments__c</fullName>
        <label>Admin Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Admin_Priority__c</fullName>
        <label>Admin Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Urgent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approved_by_RFC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Dave Meder will check this box when a change has been approved by CAB.</description>
        <label>Approved by CAB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Areas_Affected__c</fullName>
        <label>Impacted Areas</label>
        <picklist>
            <picklistValues>
                <fullName>Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order Entry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Assigned_BA__c</fullName>
        <label>Assigned BA</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_Developer__c</fullName>
        <label>Assigned Developer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_Tester__c</fullName>
        <label>Assigned Tester</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BLOG_URL__c</fullName>
        <label>BLOG URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Build_Document_Location__c</fullName>
        <label>Build Document Location</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Build_Document__c</fullName>
        <description>To link the build specifications to each requirement, the name of the build document will be entered.</description>
        <label>Build Document</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CaseReopenedByPartner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If comments are added to a case after it had been closed, check this box (via trigger) to notify owner that case comments are new</description>
        <label>CaseReopenedByPartner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Resolution__c</fullName>
        <description>This field can be used to provide the details of the resolution offered by the case owner to the partner portal user.</description>
        <inlineHelpText>This field can be used to provide the details of the resolution offered by the case owner to the partner portal user.</inlineHelpText>
        <label>Case Resolution</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Code_Location__c</fullName>
        <label>Code Location</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contacts_Transferred__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contacts Transferred</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burkina Faso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cambodia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cameroon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central African Republic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colombia</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Current_Address__c</fullName>
        <formula>Account.BillingStreet &amp; BR() &amp;
Account.BillingCity  &amp; BR() &amp;
Account.BillingState &amp;&quot;, &quot; &amp; Account.BillingCountry &amp; BR() &amp;
Account.BillingPostalCode</formula>
        <label>Current Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Opened__c</fullName>
        <description>Case Open Date</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Case Open Date is used to calculate the case age</inlineHelpText>
        <label>Date Opened</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Open__c</fullName>
        <description>Cases Days Open / Age</description>
        <formula>IF( IsClosed = False, 
1 + (TODAY() - Date_Opened__c),
ClosedDate - CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Cases Days Open / Age</inlineHelpText>
        <label>Days Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>Business Affairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JBoss - Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Sales College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deployment_Date__c</fullName>
        <description>Once each requirement has been met and confirmed, the date of deployment must be entered.</description>
        <label>Deployment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Design_Document_Location__c</fullName>
        <label>Design Document Location</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Design_Document__c</fullName>
        <description>To trace the requirement to a specific document, the name of the design document will be entered.</description>
        <label>Design Document</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Duplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will be a check box for is a requirement has been entered as a duplicate.  The Case should have a parent/child relationship to a duplicated requirement.</description>
        <label>Duplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EMEA_Approval__c</fullName>
        <description>Indicates this case has been approved for IT review by EMEA operations.</description>
        <label>EMEA Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EnterURLWhereProblemOccurs__c</fullName>
        <description>Specifies location of error</description>
        <label>Enter URL Where Problem Occurs</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Est_Build_days__c</fullName>
        <description>Estimated number of biz days for the build of the enhancement</description>
        <label>Est Build (days)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_Design_days__c</fullName>
        <description>Estimated number of biz days this enhancement will take to design</description>
        <label>Est Design (days)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_Test_days__c</fullName>
        <description>Estimated number of biz days to test the enhancement</description>
        <label>Est Test (days)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_Total_days__c</fullName>
        <formula>Est_Build_days__c + Est_Design_days__c + Est_Test_days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Est Total (days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Finance_Notified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Finance has been notified of territory changes via email</description>
        <label>Finance Notified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Information__c</fullName>
        <defaultValue>&quot;Specializations define your areas of expertise, help position you as a trusted advisor to your customers, and help your recognition in the marketplace.&quot;</defaultValue>
        <label>Information</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instructions__c</fullName>
        <defaultValue>&quot;Enter in the new account information in the appropriate fields and then click Submit.&quot;</defaultValue>
        <label>Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Issue_Type_Classification__c</fullName>
        <description>Issue Type Level 1</description>
        <inlineHelpText>Issue Type Classification</inlineHelpText>
        <label>Issue Type Classification</label>
        <picklist>
            <picklistValues>
                <fullName>General Questions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Module Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Onboarding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales and Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training Request</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Issue_Type__c</fullName>
        <label>Issue Type</label>
        <picklist>
            <controllingField>Issue_Type_Classification__c</controllingField>
            <picklistValues>
                <fullName>SKU /Pricing Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aspire / Renewal Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certifications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company Name/ Address Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Login to PRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request New User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Tier Upgrade Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Type Upgrade Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BP (Business Plan)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer References</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deal Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ideas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDF (Market Development Funds)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NFR (Not For Resale)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre Sales Queries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales College/SABA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SKU Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Migration Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Activation Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Creation Request</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LATAM_Approval__c</fullName>
        <description>Indicates this case has been approved for IT review by LATAM operations</description>
        <label>LATAM Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LD_Classification__c</fullName>
        <description>Classifying the Lead Distribution into further buckets.</description>
        <label>LD Classification</label>
        <picklist>
            <picklistValues>
                <fullName>Lead Routing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Facing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Level_of_Effort__c</fullName>
        <label>Level of Effort</label>
        <picklist>
            <picklistValues>
                <fullName>Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>App Maintenance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Module__c</fullName>
        <label>Module</label>
        <picklist>
            <picklistValues>
                <fullName>Account Profile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approvals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assigning Lead Routing Rules</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contracts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Access Setup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enhancement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hoover&apos;s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hot Topics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manage Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance &amp; Insight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Question</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quote Builder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Route Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Search Before Create</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submit Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transformation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Profile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Working Lead</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Modules__c</fullName>
        <label>Modules</label>
        <picklist>
            <picklistValues>
                <fullName>Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaigns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contracts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dashboards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heirarchy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profiles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Users</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Momentum_SET_UP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has the new user been set up in the Momentum portal?</description>
        <label>Momentum SET UP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NA_Approval__c</fullName>
        <description>Indicates this case has been approved for IT review by NA Operations</description>
        <label>NA Approval</label>
        <type>Date</type>
    </fields>
</CustomObject>